--- a/AndroidStudio/apps/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/apps/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -20,10 +20,14 @@
             android:name=".DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
             android:parentActivityName=".MyActivity" >
+            android:
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.zephyr.myfirstapp.MyActivity" />
         </activity>
     </application>
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:maxSdkVersion="17" />
 
 </manifest>
